Fix bug where snippet in drawer not properly selected when highlight sentence was clicked. Add pointer on hover to scrollbar marks.

--- a/ui/src/style/scrollbar-markup.less
+++ b/ui/src/style/scrollbar-markup.less
@@ -29,4 +29,8 @@
   border: 1px solid grey;
   width: @scrollbarWidth;
   height: @scrollbarMarkHeight;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
